--- a/MiniSeconds/app/src/main/res/layout/activity_clear_puzzle_screen.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_clear_puzzle_screen.xml
@@ -5,22 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="seveno.android.miniseconds.PicturePuzzle.ClearPuzzleScreen"
     android:orientation="vertical"
-    tools:context="seveno.android.miniseconds.BubbleShooter.FinishScreenBubble">
+    >
+    
     
     <TextView
-        android:id="@+id/txt_b_finished"
+        android:id="@+id/txt_puz_finished"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/textview_finished"
+        android:text="@string/textview_cleared"
         android:textSize="@dimen/text_size_title"
         android:textStyle="bold"
         android:typeface="serif"/>
     
     <TextView
-        android:id="@+id/txt_b_time"
+        android:id="@+id/txt_puz_time"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -29,7 +31,7 @@
         android:typeface="serif"/>
     
     <TextView
-        android:id="@+id/txt_b_finaltime"
+        android:id="@+id/txt_puz_finaltime"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -47,7 +49,7 @@
         android:typeface="serif"/>-->
     
     <TextView
-        android:id="@+id/fin_bubble_score"
+        android:id="@+id/fin_puz_score"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -56,14 +58,13 @@
         android:typeface="serif"/>
     
     <Button
-        android:id="@+id/btn_bubble_next"
+        android:id="@+id/btn_puz_next"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:onClick="btn_bubble_next"
+        android:onClick="btn_puzzle_next"
         android:text="@string/button_NextGame"
         android:textSize="@dimen/text_size"
         android:typeface="serif"/>
-    
-    
+
 </LinearLayout>
