--- a/MiniSeconds/app/src/main/res/layout/activity_game_over.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_game_over.xml
@@ -7,23 +7,33 @@
     android:layout_height="match_parent"
     tools:context="seveno.android.miniseconds.GameOver">
     
+    
     <TextView
         android:id="@+id/txt_gameOver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GameOver"
+        android:text="@string/txt_TimeOVer"
+        android:textSize="45dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    
     
     <Button
         android:id="@+id/btn_Gameover_return"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:text="재시작"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintLeft_toLeftOf="@+id/txt_gameOver"
-        app:layout_constraintTop_toBottomOf="@+id/txt_gameOver"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_gameOver"
+        android:text="메인화면"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/txt_gameOver"/>
+       
+   
+  
 </android.support.constraint.ConstraintLayout>
