--- a/MiniSeconds/app/src/main/res/layout/activity_num_clear_screen.xml
+++ b/MiniSeconds/app/src/main/res/layout/activity_num_clear_screen.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="seveno.android.miniseconds.PicturePuzzle.FinishPuzzleScreen">
-    
+    android:orientation="vertical"
+    tools:context="seveno.android.miniseconds.SpeedNumGame.ClearNumScreen">
     
     <TextView
-        android:id="@+id/txt_b_finished"
+        android:id="@+id/textview_finished"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -20,7 +20,7 @@
         android:typeface="serif"/>
     
     <TextView
-        android:id="@+id/txt_b_time"
+        android:id="@+id/textview_time"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -29,7 +29,7 @@
         android:typeface="serif"/>
     
     <TextView
-        android:id="@+id/txt_b_finaltime"
+        android:id="@+id/textview_finaltime"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -37,17 +37,17 @@
         android:textSize="@dimen/text_size"
         android:typeface="serif"/>
     
-    <!--<TextView
+    <TextView
         android:id="@+id/textview_errors"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:textSize="@dimen/text_size"
-        android:typeface="serif"/>-->
+        android:typeface="serif"/>
     
     <TextView
-        android:id="@+id/fin_bubble_score"
+        android:id="@+id/fin_speedy_score"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -56,13 +56,23 @@
         android:typeface="serif"/>
     
     <Button
-        android:id="@+id/btn_bubble_next"
+        android:id="@+id/button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:onClick="btn_bubble_next"
+        android:onClick="btn_NextGame"
         android:text="@string/button_NextGame"
         android:textSize="@dimen/text_size"
         android:typeface="serif"/>
-
+    
+    
+<!--    <Button
+        android:id="@+id/button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="btn_NextGame"
+        android:text="@string/button_ok"
+        android:textSize="@dimen/text_size"
+        android:typeface="serif"/>-->
 </LinearLayout>
