--- a/Mini_Projects/MiniSeconds/app/src/main/res/layout/b_activity_clearcb.xml
+++ b/Mini_Projects/MiniSeconds/app/src/main/res/layout/b_activity_clearcb.xml
@@ -70,6 +70,20 @@
                 android:hint="timer"
                 android:textSize="25dp"/>
         </LinearLayout>
+    
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        
+            <TextView
+                android:id="@+id/txt_cb_playtime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="플레이 시간 : "
+                android:textSize="20dp"
+                />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
